--- a/index.html
+++ b/index.html
@@ -10,17 +10,44 @@
 </head>
 
 <body>
-  <div id="app" class="flex flex-col items-center justify-center h-screen">
-    <textarea class="w-full h-40 p-4 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent" v-model="message" id="input" placeholder="请输入内容"></textarea>
-    <button class="px-4 py-2 mt-4 text-white bg-blue-500 rounded-lg shadow-sm hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2" id="button" @click="onSend">发送</button>
+  <div id="app" class="flex flex-col items-center h-screen">
+    <textarea
+      class="my-1.5 resize-none h-10 w-1/3 min-w-full md:min-w-0 h-40 p-4 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
+      v-model="message" id="input" placeholder="请输入内容"></textarea>
+    <div class="space-x-4">
+      <span class="text-sm">字数：{{message_leng}}</span>
+      <button
+        class="px-4 py-2 mt-4 text-white bg-blue-500 rounded-lg shadow-sm hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2"
+        id="button" @click="onSend">发送</button>
+    </div>
+    <ul class="flex flex-col">
+      <li class="my-1.5 p-4 border border-gray-300 rounded-lg shadow-sm" v-for="item in message_list.results">
+        <div>
+          <div>{{item.created_time}}</div>
+          <div>{{item.properties["Name"].title[0].plain_text}}</div>
+        </div>
+      </li>
+    </ul>
+    
   </div>
   <script>
-    const { createApp, ref } = Vue
+    const { createApp, ref, computed, reactive, onMounted } = Vue
     const urlParams = new URLSearchParams(window.location.search);
     const database = urlParams.get('database');
     const token = urlParams.get('token');
     console.log(database, token);
-    const url = 'https://corsproxy.io/?https://api.notion.com/v1/pages';
+
+
+    // API 功能
+    const baseurl = 'https://corsproxy.io/?https://api.notion.com/v1';
+    const addpageurl = baseurl + '/pages';
+    const querydatabaseurl = baseurl + '/databases/' + database + '/query';
+
+    const headers = {
+      Authorization: `Bearer ${token}`,
+      'content-type': 'application/json',
+      'Notion-Version': '2022-06-28'
+    };
 
     const messageBox = document.createElement('div');
     messageBox.style.position = 'fixed';
@@ -39,15 +66,27 @@
     createApp({
       setup() {
         const message = ref('');
+        const message_list = reactive({results: []});
+
+        const updateList = async function() {
+          const response = await fetch(querydatabaseurl, {
+            method: "POST",
+            headers,
+            body: "{}"
+          });
+          const res_data = await response.json();
+          if (res_data.object === "list") {
+            message_list.results = res_data.results
+          }
+          console.log(message_list.results[0])
+        }
+
         const onSend = async function (event) {
+          if (message_leng.value === 0) return;
           try {
-            const response = await fetch(url, {
+            const response = await fetch(addpageurl, {
               method: "POST",
-              headers: {
-                Authorization: `Bearer ${token}`,
-                'content-type': 'application/json',
-                'Notion-Version': '2022-06-28'
-              },
+              headers,
               body: JSON.stringify({
                 parent: {
                   database_id: database
@@ -61,12 +100,16 @@
                 }
               })
             });
+            if ((await response.json()).object === "error") {
+              throw Error("操作失败")
+            }
             messageBox.innerText = '操作成功';
             messageBox.style.backgroundColor = 'green';
             messageBox.style.opacity = '1';
             setTimeout(() => {
               messageBox.style.opacity = '0';
             }, 3000);
+            updateList();
             console.log(message.value)
           } catch (err) {
             messageBox.innerText = '操作失败';
@@ -77,10 +120,21 @@
             }, 3000);
             console.log(err)
           }
-
         }
+
+        const message_leng = computed(() => {
+          return message.value.length;
+        });
+
+       
+
+        onMounted(async () => {
+          updateList()
+        });
         return {
           message,
+          message_leng,
+          message_list,
           onSend
         }
       }
