--- a/index.html
+++ b/index.html
@@ -9,26 +9,27 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
-  <div id="app" class="flex flex-col items-center h-screen">
-    <textarea
-      class="my-1.5 resize-none h-10 w-1/3 min-w-full md:min-w-0 h-40 p-4 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
-      v-model="message" id="input" placeholder="请输入内容"></textarea>
-    <div class="space-x-4">
-      <span class="text-sm">字数：{{message_leng}}</span>
-      <button
-        class="px-4 py-2 mt-4 text-white bg-blue-500 rounded-lg shadow-sm hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2"
-        id="button" @click="onSend">发送</button>
+<body class="flex justify-center">
+  <div id="app" class="flex flex-col items-center h-screen xl:w-1/3 md:w-3/4 sm:w-full">
+    <div class="w-full">
+      <textarea
+        class="my-1.5 resize-none w-full h-40 p-4 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
+        v-model="message" id="input" placeholder="请输入内容"></textarea>
+      <div class="space-x-4 flex justify-end items-center">
+        <span class="text-xs">字数：{{message_leng}}</span>
+        <button
+          class="px-4 py-2 text-white bg-blue-500 rounded-lg shadow-sm hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2"
+          id="button" @click="onSend">发送</button>
+      </div>
     </div>
     <ul class="flex flex-col">
       <li class="my-1.5 p-4 border border-gray-300 rounded-lg shadow-sm" v-for="item in message_list.results">
         <div>
-          <div>{{item.created_time}}</div>
+          <div class="text-sm text-gray-600">{{new Date(item.created_time).toLocaleString().split(":").slice(0,-1).join(":")}}</div>
           <div>{{item.properties["Name"].title[0].plain_text}}</div>
         </div>
       </li>
     </ul>
-    
   </div>
   <script>
     const { createApp, ref, computed, reactive, onMounted } = Vue
@@ -36,7 +37,6 @@
     const database = urlParams.get('database');
     const token = urlParams.get('token');
     console.log(database, token);
-
 
     // API 功能
     const baseurl = 'https://corsproxy.io/?https://api.notion.com/v1';
@@ -66,9 +66,9 @@
     createApp({
       setup() {
         const message = ref('');
-        const message_list = reactive({results: []});
+        const message_list = reactive({ results: [] });
 
-        const updateList = async function() {
+        const updateList = async function () {
           const response = await fetch(querydatabaseurl, {
             method: "POST",
             headers,
@@ -110,7 +110,8 @@
               messageBox.style.opacity = '0';
             }, 3000);
             updateList();
-            console.log(message.value)
+            console.log(message.value);
+            message.value = "";
           } catch (err) {
             messageBox.innerText = '操作失败';
             messageBox.style.backgroundColor = 'red';
@@ -126,7 +127,7 @@
           return message.value.length;
         });
 
-       
+
 
         onMounted(async () => {
           updateList()
