--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>memos</title>
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.jsdelivr.net/npm/markdown-it@13.0.2/dist/markdown-it.min.js"></script>
 </head>
 
 <body class="flex justify-center">
@@ -25,8 +26,9 @@
     <ul class="flex flex-col">
       <li class="my-1.5 p-4 border border-gray-300 rounded-lg shadow-sm" v-for="item in message_list.results">
         <div>
-          <div class="text-sm text-gray-600">{{new Date(item.created_time).toLocaleString().split(":").slice(0,-1).join(":")}}</div>
-          <div>{{item.properties["Name"].title[0].plain_text}}</div>
+          <div class="text-sm text-gray-600">{{new
+            Date(item.created_time).toLocaleString().split(":").slice(0,-1).join(":")}}</div>
+          <div v-html="md.render(item.properties['Name'].title[0].plain_text)"></div>
         </div>
       </li>
     </ul>
@@ -65,6 +67,7 @@
 
     createApp({
       setup() {
+        const md = window.markdownit();
         const message = ref('');
         const message_list = reactive({ results: [] });
 
@@ -100,6 +103,7 @@
                 }
               })
             });
+
             if ((await response.json()).object === "error") {
               throw Error("操作失败")
             }
@@ -136,7 +140,8 @@
           message,
           message_leng,
           message_list,
-          onSend
+          onSend,
+          md
         }
       }
     }).mount('#app')
